--- a/client/src/index.css
+++ b/client/src/index.css
@@ -503,7 +503,7 @@ ul {
     }
 
     .iphone-screen {
-        border-radius: 30px !important;
+        border-radius: 44px !important;
     }
 
     .video-wrapper {
@@ -538,8 +538,8 @@ ul {
         font-size: 16px !important;
     }
     .mute-button {
-        bottom: 50px !important;
-        right: 15px !important;
+        bottom: 65px !important;
+        right: 25px !important;
     }
     .videosw-feature-sectionas {
         background: radial-gradient(3139.68% 100% at 50% 0%, #FFF2F2 0%, rgba(255, 242, 242, 0) 100%) !important;
@@ -633,4 +633,9 @@ ul {
     display: flex;
     justify-content: center;
 }
-
+@media(max-width:400px){
+    .mute-button {
+        bottom: 50px !important;
+        right: 15px !important;
+    }
+}
