--- a/client/src/index.css
+++ b/client/src/index.css
@@ -638,4 +638,7 @@ ul {
         bottom: 50px !important;
         right: 15px !important;
     }
+    .iphone-screen,.iphone-screen video {
+        border-radius: 30px !important;
+    }
 }
