--- a/client/src/font.css
+++ b/client/src/font.css
@@ -1,42 +1,55 @@
 @font-face {
   font-family: 'Absolute';
-  src: url('./assets/fonts/Absolute-Fixed.woff2') format('woff2');
+  src: url('/fonts/Absolute-Fixed.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Parslay';
-  src: url('./assets/fonts/Parslay.woff2') format('woff2');
+  src: url('/fonts/Parslay.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Satoshi-Light';
-  src: url('./assets/fonts/Satoshi-Light.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Light.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: 'Satoshi-Regular';
-  src: url('./assets/fonts/Satoshi-Regular.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Regular.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: 'Satoshi-Medium';
-  src: url('./assets/fonts/Satoshi-Medium.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Medium.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: 'Satoshi-Bold';
-  src: url('./assets/fonts/Satoshi-Bold.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Bold.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: 'Satoshi-Black';
-  src: url('./assets/fonts/Satoshi-Black.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Black.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: 'Satoshi-Variable';
-  src: url('./assets/fonts/Satoshi-Variable.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Variable.woff2') format('woff2');
   font-style: normal;
+  font-display: swap;
 }
