--- a/client/src/index.css
+++ b/client/src/index.css
@@ -642,7 +642,7 @@ ul {
     display: flex;
     justify-content: center;
 }
-@media(max-width:400px){
+@media (min-width: 377px) and (max-width:400px){
     .mute-button {
         bottom: 50px !important;
         right: 15px !important;
