--- a/client/src/index.css
+++ b/client/src/index.css
@@ -650,6 +650,7 @@ ul {
     .iphone-screen,.iphone-screen video {
         border-radius: 30px !important;
     }
+}
   @media (max-width:376px){
     .mute-button {
         bottom: 50px !important;
